kubernates/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ku-grade-report-beautifier
  labels:
    app: frontend
spec:
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: ku-grade-report-beautifier
        image: gcr.io/grade-report-beautifier/ku-grade-report-beautifier:v1
        ports:
        - containerPort: 8080
