kubernates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
