kubernates/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: grade-report.thechun.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: website-service
          servicePort: 80
  tls:
  - secretName: website-tls-cert
    hosts:
    - grade-report.thechun.xyz
